--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body {
   height: 100%;
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
-  background-image : url(images/bg_home.png);
+  background-image : url(website/images/bg_home.png);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
