--- a/style.css
+++ b/style.css
@@ -68,6 +68,9 @@ padding:0;
 .topnav {
   overflow: hidden;
   background-color: #333;
+  display: flex;
+  height: 48px;
+  display: table;
 }
 
 .topnav a {
